--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "README.MD",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:backend": "cd packages/backend && npm run start",
+    "start:fronted": "cd packages/fronted && yarn dev"
   },
   "repository": {
     "type": "git",
