--- a/packages/fronted/package.json
+++ b/packages/fronted/package.json
@@ -13,6 +13,8 @@
     "@mui/material": "^5.2.5",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
