--- a/packages/fronted/package.json
+++ b/packages/fronted/package.json
@@ -12,12 +12,14 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.5",
+    "@types/uuid": "^8.3.3",
     "classnames": "^2.3.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
